[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "vivainsights"
version = "0.2.2"
authors = [
  { name="Martin Chan", email="martinchan@microsoft.com" },
  { name="Aadarsh Indurkhya", email="aindurkhya@microsoft.com" },
  { name="Aaron Harrison", email="aaron.harrison@microsoft.com" },
  { name="Arghya Mukherjee", email="arghya.mukherjee@microsoft.com" },
  { name="Carlos Morales Torrado", email="carlos.morales@microsoft.com" },
  { name="Ellen Trinklein"},
  { name="JJ Walia", email="jjwalia@microsoft.com" },
  { name="Kari Eifler", email="karieifler@microsoft.com" }  
]
description = "Python library to analyze and visualize data from Microsoft Viva Insights."
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.7"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/microsoft/vivainsights-py"
"Bug Tracker" = "https://github.com/microsoft/vivainsights-py/issues"